tests/golden/err-odd-indent/expected_error.txt
error: インデントは2スペース単位である必要があります(現在3スペース)
 --> main.clum:2:1
  |
2 |    b
  | ^^^
